fixed footer wrap

--- a/fend/src/Styles/_Footer.scss
+++ b/fend/src/Styles/_Footer.scss
@@ -8,6 +8,8 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
+        flex-wrap: wrap;
+        border: 2px solid black;
         .social {
             display: flex;
             flex-wrap: wrap;
